--- a/bilibili-lite/src/message/base.styl
+++ b/bilibili-lite/src/message/base.styl
@@ -37,6 +37,9 @@
 .right-box .text-box
 	color var(--c-text) !important
 
+.list .item.active a
+	color var(--c-accent) !important
+
 .card
 .action-menu .menu-list
 	box-shadow none !important
@@ -102,6 +105,7 @@
 	background-color var(--c-border) !important
 
 .side-bar .item
+	border-radius 10px
 	text-align center
 	transition background-color 0.3s ease-in-out !important
 
