--- a/bilibili-lite/src/public/button.styl
+++ b/bilibili-lite/src/public/button.styl
@@ -1,5 +1,6 @@
 /* button */
 button
+.button
 .btn
 .default-btn
 .bili-btn
@@ -78,6 +79,8 @@ button
 .card .focus-btn .unfocus
 .card .focus-btn .focus
 .top-header .focus-btn
+.coin-dialog-mask .coin-operated .coin-bottom .coin-btn
+.el-pagination.is-background .el-pager li.active
   position relative
   border-color var(--c-accent) !important
   background-color var(--c-accent) !important
@@ -173,6 +176,8 @@ button
 .btn-group .ui-btn.white
 .publish-launcher .publish-btn.disabled
 .button-bar .bp-button
+.el-pagination.is-background .el-pager li
+.warning-btn
   border 1px solid var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-title) !important
