--- a/bilibili-lite/src/v/base.styl
+++ b/bilibili-lite/src/v/base.styl
@@ -44,11 +44,14 @@
 
 .video-item-biref .biref-info .biref-title
 .energy-m .headline .name
+.coming-soon-wrapper .block-title
 	color var(--c-title) !important
 
 .bangumi-home-crumb .fcname ul.n_num li a
 .spread-module .num span
 .sub-nav-m ul li a
+.coming-soon-wrapper .card-wrapper .card-item .time-line-wrapper .date
+.coming-soon-wrapper .card-wrapper .card-item .time-line-wrapper .time
 	color var(--c-text) !important
 
 .bangumi-home-crumb .fcname ul.n_num li.on a
