--- a/bilibili-lite/src/v/blackboard.styl
+++ b/bilibili-lite/src/v/blackboard.styl
@@ -1,4 +1,5 @@
-/* 广场 专题 */
+/* 广场 专题 帮助 */
+.banner
 .active-title .b-active-i
 .topic-title .b-topic-i
   display none !important
@@ -6,9 +7,22 @@
 .box-body
 #webShare .bili-share-pc
 .bili-share-pc .weixin-hover .qr-before
+.help-list
+.help-box
   background-color var(--c-background) !important
 
+.help-content img
+.collapse-item--active
+.collapse-item:hover
+  background-color var(--c-hover) !important
+
+.mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar
+.mCSB_scrollTools .mCSB_dragger:hover .mCSB_dragger_bar
+  background-color var(--c-scroll) !important
+
 .activity-playlist .activity-playlist-item
+.help-body p
+.mCSB_scrollTools .mCSB_draggerRail
   background-color transparent !important
 
 .active-title .b-active-t
@@ -20,12 +34,17 @@
   color var(--c-text) !important
 
 .nav-tab .on
+.collapse-item--active .collapse-title
   color var(--c-accent) !important
 
 .active-title
 .nav-tab
 .bili-share-pc
   border-color var(--c-border) !important
+
+.help-list
+.help-box
+  border 0 !important
 
 .act-list ul li
   border-color var(--c-border) !important
@@ -43,6 +62,14 @@
 
 .active-main .back-top
   right 150px
+
+.collapse-item
+  border-radius 10px
+  transition background-color 0.3s ease-in-out
+
+  a
+    text-align center
+    transition color 0.3s ease-in-out
 
 button
   background-color transparent !important
