--- a/bilibili-lite/src/index.styl
+++ b/bilibili-lite/src/index.styl
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           bilibili-lite
 @namespace      tolking-usercss
-@version        1.1.0
+@version        1.1.1
 @description    一个简化的bilibili页面样式，自适应黑暗模式
 @author         tolking <qw13131wang@gmail.com> (https://ououe.com)
 @homepageURL		https://github.com/tolking/usercss/tree/master/bilibili-lite
@@ -47,3 +47,4 @@
 @import 'member'
 @import 'audio'
 @import 't'
+@import 'pay'
